vpc/vpc-public-private-subs.yaml
Description: 

    This template deploys a VPC, with a pair of public and private subnets spread 

    across two Availability Zones. It deploys an Internet Gateway, with a default 

    route on the public subnets.

Parameters:

    VPCname:
        Description: Enter VPC name that will be used for this resource.
        Type: String

    VPCBilling:
        Description: Enter department that will be billed for this VPC. [IT, DevOps, Finance, Developers, Information Security. Default is InfoSec.]
        Type: String
        Default: InformationSecurity

    VPCOwner:
        Description: "Predefined Hard coded Tag for Owner of this resource."
        Type: String
        Default: InformationSecurity
        AllowedValues:
            - InformationSecurity

    EnvironmentName:
        Description: An environment name that will be prefixed to resource names
        Type: String



    VpcCIDR: 

        Description: Please enter the IP range (CIDR notation) for this VPC

        Type: String

        Default: 10.192.0.0/16



    PublicSubnet1CIDR:

        Description: Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone

        Type: String

        Default: 10.192.1.0/24



    PublicSubnet2CIDR:

        Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone

        Type: String

        Default: 10.192.2.0/24



    PrivateSubnet1CIDR:

        Description: Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone

        Type: String

        Default: 10.192.3.0/24



    PrivateSubnet2CIDR:

        Description: Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone

        Type: String

        Default: 10.192.4.0/24

Resources:
    
    VPC: 
        Type: AWS::EC2::VPC

        Properties:
            
            CidrBlock: !Ref VpcCIDR
            
            Tags: 
                - Key: Name 
                  Value: !Ref VPCname
                
                - Key: Billing
                  Value: !Ref VPCBilling

                - Key: Owner
                  Value: !Ref VPCOwner
            
    InternetGateway:

        Type: AWS::EC2::InternetGateway

        Properties:

            Tags:
                - Key: Name
                  Value: !Ref EnvironmentName

                - Key: Billing
                  Value: !Ref VPCBilling           

    InternetGatewayAttachment:

        Type: AWS::EC2::VPCGatewayAttachment

        Properties:

            InternetGatewayId: !Ref InternetGateway

            VpcId: !Ref VPC



    PublicSubnet1: 

        Type: AWS::EC2::Subnet

        Properties:

            VpcId: !Ref VPC

            AvailabilityZone: !Select [ 0, !GetAZs '' ]

            CidrBlock: !Ref PublicSubnet1CIDR

            MapPublicIpOnLaunch: true

            Tags: 

                - Key: Name 
                  Value: !Sub ${EnvironmentName} Public Subnet (AZ1)

                - Key: Billing
                  Value: !Ref VPCBilling

                - Key: Owner
                  Value: !Ref VPCOwner

    PublicSubnet2: 

        Type: AWS::EC2::Subnet

        Properties:

            VpcId: !Ref VPC

            AvailabilityZone: !Select [ 1, !GetAZs '' ]

            CidrBlock: !Ref PublicSubnet2CIDR

            MapPublicIpOnLaunch: true

            Tags: 

                - Key: Name 
                  Value: !Sub ${EnvironmentName} Public Subnet (AZ2)

                - Key: Billing
                  Value: !Ref VPCBilling

                - Key: Owner
                  Value: !Ref VPCOwner

    PrivateSubnet1: 

        Type: AWS::EC2::Subnet

        Properties:

            VpcId: !Ref VPC

            AvailabilityZone: !Select [ 0, !GetAZs '' ]

            CidrBlock: !Ref PrivateSubnet1CIDR

            MapPublicIpOnLaunch: false

            Tags: 

                - Key: Name 
                  Value: !Sub ${EnvironmentName} Private Subnet (AZ1)

                - Key: Billing
                  Value: !Ref VPCBilling

                - Key: Owner
                  Value: !Ref VPCOwner

    PrivateSubnet2: 

        Type: AWS::EC2::Subnet

        Properties:

            VpcId: !Ref VPC

            AvailabilityZone: !Select [ 1, !GetAZs '' ]

            CidrBlock: !Ref PrivateSubnet2CIDR

            MapPublicIpOnLaunch: false

            Tags: 

                - Key: Name 
                  Value: !Sub ${EnvironmentName} Private Subnet (AZ2)

                - Key: Billing
                  Value: !Ref VPCBilling

                - Key: Owner
                  Value: !Ref VPCOwner

    PublicRouteTable:

        Type: AWS::EC2::RouteTable

        Properties: 

            VpcId: !Ref VPC

            Tags: 

                - Key: Name 
                  Value: !Sub ${EnvironmentName} Public Routes

                - Key: Billing
                  Value: !Ref VPCBilling

                - Key: Owner
                  Value: !Ref VPCOwner


    DefaultPublicRoute: 

        Type: AWS::EC2::Route

        DependsOn: InternetGatewayAttachment

        Properties: 

            RouteTableId: !Ref PublicRouteTable

            DestinationCidrBlock: 0.0.0.0/0

            GatewayId: !Ref InternetGateway



    PublicSubnet1RouteTableAssociation:

        Type: AWS::EC2::SubnetRouteTableAssociation

        Properties:

            RouteTableId: !Ref PublicRouteTable

            SubnetId: !Ref PublicSubnet1


    PublicSubnet2RouteTableAssociation:

        Type: AWS::EC2::SubnetRouteTableAssociation

        Properties:

            RouteTableId: !Ref PublicRouteTable

            SubnetId: !Ref PublicSubnet2    


    PrivateRouteTable1:

        Type: AWS::EC2::RouteTable

        Properties: 

            VpcId: !Ref VPC

            Tags: 

                - Key: Name 
                  Value: !Sub ${EnvironmentName} Private Routes (AZ1)

                - Key: Billing
                  Value: !Ref VPCBilling

                - Key: Owner
                  Value: !Ref VPCOwner



    DefaultPrivateRoute1:

        Type: AWS::EC2::Route

        Properties:

            RouteTableId: !Ref PrivateRouteTable1

            DestinationCidrBlock: 0.0.0.0/0



    PrivateSubnet1RouteTableAssociation:

        Type: AWS::EC2::SubnetRouteTableAssociation

        Properties:

            RouteTableId: !Ref PrivateRouteTable1

            SubnetId: !Ref PrivateSubnet1



    PrivateRouteTable2:

        Type: AWS::EC2::RouteTable

        Properties: 

            VpcId: !Ref VPC

            Tags: 

                - Key: Name 
                  Value: !Sub ${EnvironmentName} Private Routes (AZ2)

                - Key: Billing
                  Value: !Ref VPCBilling

                - Key: Owner
                  Value: !Ref VPCOwner



    DefaultPrivateRoute2:

        Type: AWS::EC2::Route

        Properties:

            RouteTableId: !Ref PrivateRouteTable2

            DestinationCidrBlock: 0.0.0.0/0


    PrivateSubnet2RouteTableAssociation:

        Type: AWS::EC2::SubnetRouteTableAssociation

        Properties:

            RouteTableId: !Ref PrivateRouteTable2

            SubnetId: !Ref PrivateSubnet2



    NoIngressSecurityGroup:
    
        Type: AWS::EC2::SecurityGroup

        Properties:
        
            GroupName: "no-ingress-sg"

            GroupDescription: "Security group with no ingress rule"

            VpcId: !Ref VPC



Outputs: 



    VPC: 

        Description: A reference to the created VPC

        Value: !Ref VPC



    PublicSubnets:

        Description: A list of the public subnets

        Value: !Join [ ",", [ !Ref PublicSubnet1, !Ref PublicSubnet2 ]]



    PrivateSubnets:

        Description: A list of the private subnets

        Value: !Join [ ",", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2 ]]



    PublicSubnet1:

        Description: A reference to the public subnet in the 1st Availability Zone

        Value: !Ref PublicSubnet1



    PublicSubnet2: 

        Description: A reference to the public subnet in the 2nd Availability Zone

        Value: !Ref PublicSubnet2



    PrivateSubnet1:

        Description: A reference to the private subnet in the 1st Availability Zone

        Value: !Ref PrivateSubnet1



    PrivateSubnet2: 

        Description: A reference to the private subnet in the 2nd Availability Zone

        Value: !Ref PrivateSubnet2
        
        
        
    NoIngressSecurityGroup:

        Description: Security group with no ingress rule
        
        Value: !Ref NoIngressSecurityGroup
